test/should_pass/enum_008.grg
using attrib_model_001, enum_model_004;

rule r {
	pattern {
		x:NINT - l:B -> k:A;
	}
	modify{
		eval { x.a = (te::c == te2::z) ? 0 : 1; }
	}
}
