test/should_fail/enum_009.grg
//access to an undeclared enum type
using attrib_model_001, enum_model_001;

rule r {
	pattern {
		x: NBOOL;
		k: A;
	}
	modify {
		eval {
			x.a = te2::y == k.e;
		}
	}
}

